# phc-patient

./: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/build_resolvers/: sdk.sum.deps
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/0955ce755dcda0815c9f91d7072bd81a/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
android/app/: build.gradle.kts
assets/icons/: LICENSE_NOTICE.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: activity_tracker_chart.dart  app_icon.dart  app_photo.dart  doctor_card.dart  ecg_analysis_chart.dart  metric_card.dart  steps_circle_progress.dart  strength_score_card.dart  suggested_meal_card.dart  weight_tracker_card.dart
lib/config/: api_config.dart
lib/custom-pages/: meal_detail_page.dart
lib/data/: api_client.dart  api_exception.dart  token_storage.dart
lib/data/models/: child_models.dart  child_models.freezed.dart  child_models.g.dart  clinical_models.dart  clinical_models.freezed.dart  clinical_models.g.dart  facility_models.dart  facility_models.freezed.dart  facility_models.g.dart  ncd_tb_models.dart  ncd_tb_models.freezed.dart  ncd_tb_models.g.dart  patient_auth_models.dart  patient_auth_models.freezed.dart  patient_auth_models.g.dart  patient_profile.dart  patient_profile.freezed.dart  patient_profile.g.dart  pregnancy_models.dart  pregnancy_models.freezed.dart  pregnancy_models.g.dart  scheme_models.dart  scheme_models.freezed.dart  scheme_models.g.dart  visit_models.dart  visit_models.freezed.dart  visit_models.g.dart
lib/data/repositories/: live_assistant_repository.dart  patient_auth_repository.dart  patient_portal_repository.dart
lib/models/: doctor_model.dart  health_metric_model.dart  meal_model.dart
lib/screens/: emergency_screen.dart  health_records_screen.dart  health_schemes_screen.dart  laboratory_screen.dart  nearby_phc_screen.dart  notifications_screen.dart  queue_screen.dart
lib/screens/assistant/: live_assistant_screen.dart
lib/screens/auth/: auth_gate.dart  mobile_entry_screen.dart  otp_verify_screen.dart  patient_picker_screen.dart  register_screen.dart
lib/screens/dashboard/: adaptive_dashboard_shell.dart  child_dashboard.dart  general_adult_dashboard.dart  ncd_dashboard.dart  pregnancy_dashboard.dart  tb_dashboard.dart
lib/state/: auth_provider.dart  live_assistant_provider.dart  profile_provider.dart
lib/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
phc_ai_assistant/: README.md  pubspec.yaml
phc_ai_assistant/android/app/: build.gradle.kts  (+1 more)
phc_ai_assistant/android/app/src/main/cpp/: CMakeLists.txt
phc_ai_assistant/backend/: server.js
phc_ai_assistant/lib/: main.dart
phc_ai_assistant/test/: chat_cubit_test.dart  tts_playback_queue_test.dart  widget_test.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+104 files in other folders)
